html weekly section done

--- a/thailand.html
+++ b/thailand.html
@@ -30,20 +30,20 @@
         </aside>
         <ul>
             <li><a href="./index.html" target="_blank">Home</a></li>
-            <li><a href="./index.html/#about">About</a></li>
-            <li><a href="#contact.html">Contact</a></li>
-            <li><a href="./korea.html">Korea</a></li>
-            <li><a href="./thailand.html">Thailand</a></li>
-            <li><a href="./brazil.html">Brazil</a></li>
+            <li><a href="#introduce">Introduction</a></li>
+            <li><a href="#weekly">Assingments</a></li>
+            <li><a href="#price">Packages</a></li>
+            <li><a href="./korea.html" target="_blank">Korea</a></li>
+            <li><a href="./brazil.html" target="_blank">Brazil</a></li>
         </ul>
         <details>
             <summary class="fa-solid fa-bars"></summary>
             <ul>
                 <li><a href="./index.html" target="_blank">Home</a></li>
-                <li><a href="#about.html">About</a></li>
-                <li><a href="#contact.html">Contact</a></li>
+                <li><a href="#introduce">Introduction</a></li>
+                <li><a href="#weekly">Assingments</a></li>
+                <li><a href="#price">Packages</a></li>
                 <li><a href="./korea.html" target="_blank">Korea</a></li>
-                <li><a href="./thailand.html" target="_blank">Thailand</a></li>
                 <li><a href="./brazil.html" target="_blank">Brazil</a></li>
             </ul>
         </details>
@@ -63,7 +63,7 @@
     <!-- MAIN  -->
     <main>
         <!-- INTRODUCE -->
-        <section class="introduce">
+        <section class="introduce" id="introduce">
             <figure>
                 <img src="./home_img/thai-tutor.jpg" alt="pic">
                 <figcaption>
@@ -78,11 +78,11 @@
             </figure>
             <section class="me">
                 <article>
-                    <h2>
+                    <h3>
                         About Nattar
-                    </h2>
+                    </h3>
                     <p>
-                        สวัสดีค่ะ ณัฐฐา ค่ะ, I'm a high school teacher with over 8 years of experience teaching in the classroom, 3 more year teaching online and over 15 years of tutoring Maths, English, Science and History. แล้วพบกันนะคะ.
+                        สวัสดีค่ะ ณัฐฐา ค่ะ, I'm a high school teacher with over 8 years of experience teaching in the classroom, 3 more year teaching online and over 15 years of tutoring Maths, Thai, Science and History. แล้วพบกันนะคะ.
                     </p>
                 </article>
                 <ul>
@@ -117,12 +117,69 @@
                 </ul>
             </section>
         </section>
-        <!-- ASSIGNMENT -->
-        <section class="assignment">
-
+        <!-- WEEKLY -->
+        <section class="weekly" id="weekly">
+            <article>
+                <h2>
+                    Weekly Assingments
+                </h2>
+                <p>
+                    Select your Course for explore more knowledge.
+                </p>
+            </article>
+            <section>
+                <figure>
+                    <img src="./thai_img/english.jpg" alt="lang">
+                    <figcaption>
+                        <h4>
+                            Language
+                        </h4>
+                        <h3>
+                            Thai Language-Communication
+                        </h3>
+                    </figcaption>
+                    <a href="#">Join</a>
+                </figure>
+                <figure>
+                    <img src="./thai_img/math.jpg" alt="math">
+                    <figcaption>
+                        <h4>
+                            Math 
+                        </h4>
+                        <h3>
+                            Mathematics for everyday life
+                        </h3>
+                    </figcaption>
+                    <a href="#">Join</a>
+                </figure>
+                <figure>
+                    <img src="./thai_img/science.jpg" alt="science">
+                    <figcaption>
+                        <h4>
+                            Science
+                        </h4>
+                        <h3>
+                            Fun Science 
+                        </h3>
+                    </figcaption>
+                    <a href="#">Join</a>
+                </figure>
+                <figure>
+                    <img src="./thai_img/history.jpg" alt="history">
+                    <figcaption>
+                        <h4>
+                            History
+                        </h4>
+                        <h3>
+                            History of Thailand
+                        </h3>
+                    </figcaption>
+                    <a href="#">Join</a>
+                </figure>
+            </section>
         </section>
-        <!-- PACKAGE -->
-        <section class="package">
+        <!-- PRICE -->
+        <section class="price">
 
         </section>
 
