Brazil: Assignments and Packages

--- a/brazil.html
+++ b/brazil.html
@@ -70,11 +70,77 @@
         </p>
         <article>
             <figure>
-                
+                <img src="/brazil_img/ola.png" alt="Portuguese">
+                <figcaption>
+                    <aside>
+                      <h3>Portuguese</h3>
+                      <p>Grade 1-10</p>
+                      <small>40 weeks</small>
+                    </aside>
+                    <aside>
+                      <h4>$350.00</h4>
+                      <a href="#">Join</a>
+                    </aside>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="/brazil_img/science.png" alt="Science">
+                <figcaption>
+                    <aside>
+                      <h3>Science</h3>
+                      <p>Grade 1-10</p>
+                      <small>40 weeks</small>
+                    </aside>
+                    <aside>
+                      <h4>$350.00</h4>
+                      <a href="#">Join</a>
+                    </aside>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="/brazil_img/math.png" alt="Math">
+                <figcaption>
+                    <aside>
+                      <h3>Math</h3>
+                      <p>Grade 1-10</p>
+                      <small>40 weeks</small>
+                    </aside>
+                    <aside>
+                      <h4>$350.00</h4>
+                      <a href="#">Join</a>
+                    </aside>
+                </figcaption> 
+            </figure>
+            <figure>
+                <img src="/brazil_img/history-book.png" alt="History">
+                <figcaption>
+                    <aside>
+                      <h3>Portuguese</h3>
+                      <p>Grade 1-10</p>
+                      <small>40 weeks</small>
+                    </aside>
+                    <aside>
+                      <h4>$350.00</h4>
+                      <a href="#">Join</a>
+                    </aside>
+                </figcaption>
             </figure>
         </article>
     </section>
     <section class="packages" id="packages">
+        <h2>
+            Find the right plan!
+        </h2>
+        <article>
+            <section>
+                <aside>
+                    <h3>
+                        10 Hours/6 Months
+                    </h3>
+                    
+                </aside>
+            </section>
+        </article>
     </section>
 </main>
 <!-- FOOTER -->
