--- a/index.html
+++ b/index.html
@@ -362,19 +362,20 @@
                     <li>
                         <i class="fa-brands fa-rocketchat"></i>
                         <a href="./korea.html" target="_blank" >
-                            Korean
-                        </a>
-                    </li>
-                    <li>
-                        <i class="fa-brands fa-rocketchat"></i>
-                        <a href="./brazil.html " target="_blank" >
-                            Brazilian
+                            Korea
                         </a>
                     </li>
                     <li>
                         <i class="fa-brands fa-rocketchat"></i>
                         <a href="./thailand.html" target="_blank" >
                             Thai
+                        </a>
+                        
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-rocketchat"></i>
+                        <a href="./brazil.html " target="_blank" >
+                            Brazil
                         </a>
                     </li>
                     <li>
