--- a/korea.html
+++ b/korea.html
@@ -53,7 +53,7 @@
   <header>
     <section>
       <aside>
-        <h1>Teaching for Diersity</h1>
+        <h1>Teaching for Diversity</h1>
         <h3>Improve your skills with our team</h3>
         <a href="#about">OUR STORY</a>
       </aside>
