Korea: Header is changed

--- a/korea.html
+++ b/korea.html
@@ -50,12 +50,12 @@
   </nav>  
   <!-- NAV END  -->
   <!-- HEADER  -->
-  <header>
+  <header class="korean">
     <section>
       <aside>
-        <h1>Teaching for Diversity</h1>
-        <h3>Improve your skills with our team</h3>
-        <a href="#about">OUR STORY</a>
+        <span>Thailand</span>
+        <strong>Korea</strong>
+        <span>Brazil</span>
       </aside>
     </section>
   </header>
