Packages and Assignments HTML done

--- a/brazil.html
+++ b/brazil.html
@@ -59,14 +59,24 @@
 </header>
 <!-- HEADER END  -->
 <main>
+    <!-- INTRODUCTION -->
     <section class="introduction" id="introduction">
+        <figure>
+            <img src="/home_img/brazilian-tutor.jpg" alt="Thomaz">
+            <figcaption>
+                <h1>Hi, I'm Thomaz</h1>
+                <p>One of the best things in life for me is to make a person learn something. I love doing that, that's why I'll always be there to support and guide you in your studies.</p>
+            </figcaption>
+        </figure>
     </section>
+    <!-- INTRODUCTION END -->
+    <!-- ASSIGNMENTS -->
     <section class="assigments" id="assigments">
         <h2>
             Weekly Assignments
         </h2>
         <p>
-
+            Once you're in, DPN offers assignments every single week so you can constantly practice and evolve your knowledge as you learn from the classes.
         </p>
         <article>
             <figure>
@@ -127,6 +137,8 @@
             </figure>
         </article>
     </section>
+    <!-- ASSIGNMENTS END -->
+    <!-- PACKAGES -->
     <section class="packages" id="packages">
         <h2>
             Find the right plan!
@@ -135,13 +147,78 @@
             <section>
                 <aside>
                     <h3>
-                        10 Hours/6 Months
+                        10 Hours/week
                     </h3>
-                    
+                    <span>
+                        6 Months
+                    </span>
                 </aside>
+                <ul>
+                    <li>Change/cancel anytime</li>
+                    <li>Access on mobile, tablet or desktop</li>
+                </ul>
+                <strong>
+                    <p>$349.99</p>
+                    <small>(One-time,$35/h)</small>
+                </strong>
+                <a href="#">Subscribe</a>
+            </section>
+            <section>
+                <aside>
+                    <h3>
+                        10 Hours/week
+                    </h3>
+                    <span>
+                        6 Months
+                    </span>
+                </aside>
+                <ul>
+                    <li>Change/cancel anytime</li>
+                    <li>Access on mobile, tablet or desktop</li>
+                    <li>Unlimited Access to classes</li>
+                    <li>Tutors available 24/7</li>
+                </ul>
+                <strong>
+                    <aside>
+                        <p class="price">$649.99</p>
+                        <p>$549.99</p>   
+                    </aside>
+                    <small>(One-time,$28/h)</small>
+                </strong>
+                <p>Save $0 using code: DPN23</p>
+                <a href="#">Subscribe</a>
+            </section>
+            <section>
+                <aside class="value">Best Value</aside>
+                <aside>
+                    <h3>
+                        50 Hours/week
+                    </h3>
+                    <span>
+                        6 Months
+                    </span>
+                </aside>
+                <ul>
+                    <li>Change/cancel anytime</li>
+                    <li>Access on mobile, tablet or desktop</li>
+                    <li>Unlimited Access to classes</li>
+                    <li>Tutors available 24/7</li>
+                    <li>Lectures every week</li>
+                    <li>Additional special classes</li>
+                </ul>
+                <strong>
+                    <aside>
+                        <p class="price">$1049.99</p>
+                        <p>$849.99</p>
+                    </aside>
+                    <small>(One-time,$26/h)</small>
+                </strong>
+                <p>Save $100 using code: DPN23</p>
+                <a href="#">Subscribe</a>
             </section>
         </article>
     </section>
+    <!-- PACKAGES END -->
 </main>
 <!-- FOOTER -->
 <footer>
