Introduction HTML is done

--- a/brazil.html
+++ b/brazil.html
@@ -65,7 +65,10 @@
             <img src="/home_img/brazilian-tutor.jpg" alt="Thomaz">
             <figcaption>
                 <h1>Hi, I'm Thomaz</h1>
-                <p>One of the best things in life for me is to make a person learn something. I love doing that, that's why I'll always be there to support and guide you in your studies.</p>
+                <p>Teaching for 7 years, I can tell that one of the best things in life is to see a person learn something you taught them. I love doing it, that's why I'll always be there to support and guide you in your studies.</p>
+                <p>
+                    Interessado em aprender Matemática, Ciências, História e Português de uma vez por todas? Não se preocupe, você está no lugar certo. 
+                </p>
             </figcaption>
         </figure>
     </section>
