--- a/thailand.html
+++ b/thailand.html
@@ -56,6 +56,9 @@
                 <h1>Teaching for Diersity</h1>
                 <h3>Improve your skills with our team</h3>
                 <a href="#about">OUR STORY</a>
+                <!-- <h1>Looking for your Perfect Thai tutor?</h1>
+                <h3>Finding an answer with me</h3>
+                <a href="#price">Book a class</a> -->
             </aside>
         </section>
     </header>
@@ -118,7 +121,7 @@
             </section>
         </section>
         <!-- WEEKLY -->
-        <section class="weekly" id="weekly">
+        <section class="row weekly" id="weekly">
             <article>
                 <h2>
                     Weekly Assingments
@@ -179,8 +182,56 @@
             </section>
         </section>
         <!-- PRICE -->
-        <section class="price">
-
+        <section class="row price" id="price">
+            <article>
+                <aside>
+                    <h2>
+                        Find your right plan
+                    </h2>
+                </aside>
+            </article>
+            <section>
+                <aside>
+                    <i class="fa-regular fa-file-code"></i>
+                    <h4>
+                        5 Lessons
+                    </h4>
+                    <p>
+                        1 month, 1 lesson per week
+                    </p>
+                    <strong>
+                        $50
+                    </strong>
+                    <a href="./index.html">Select</a>
+                </aside>
+                <aside>
+                    <i class="fa-regular fa-file-code"></i>
+                    <h4>
+                        10 Lessons
+                    </h4>
+                    <p>
+                        1 month, 2 lesson per week
+                    </p>
+                    <strong>
+                        $90
+                    </strong>
+                    <a href="./index.html">Select</a>
+                </aside>
+                <aside>
+                    <h5>POPULAR</h5>
+                    <i class="fa-regular fa-file-code"></i>
+                    <h4>
+                        20 Lessons + 1 lesson <span>FREE</span> 
+                    </h4>
+                    <p>
+                        1 month, 4 lessons per week
+                    </p>
+                    <strong>
+                        $200
+                    </strong>
+                    <a href="./index.html">Select</a>
+                </aside>
+            </section>
         </section>
 
     </main>
@@ -218,19 +269,19 @@
                     <li>
                         <i class="fa-brands fa-rocketchat"></i>
                         <a href="./korea.html" target="_blank" >
-                            Korean
-                        </a>
-                    </li>
-                    <li>
-                        <i class="fa-brands fa-rocketchat"></i>
-                        <a href="./brazil.html " target="_blank" >
-                            Brazilian
+                            Korea
                         </a>
                     </li>
                     <li>
                         <i class="fa-brands fa-rocketchat"></i>
                         <a href="./thailand.html" target="_blank" >
                             Thai
+                        </a>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-rocketchat"></i>
+                        <a href="./brazil.html " target="_blank" >
+                            Brazil
                         </a>
                     </li>
                     <li>
@@ -247,12 +298,12 @@
                     Follow Us
                 </h3>
                 <section class="icons">
-                <ul>
-                    <li><a href="#" class="fa-brands fa-facebook"></a></li>
-                    <li><a href="#" class="fa-brands fa-twitter"></a></li>
-                    <li><a href="#" class="fa-brands fa-linkedin"></a></li>
-                    <li><a href="#" class="fa-brands fa-youtube"></a></li>
-                </ul>
+                    <ul>
+                        <li><a href="#" class="fa-brands fa-facebook"></a></li>
+                        <li><a href="#" class="fa-brands fa-twitter"></a></li>
+                        <li><a href="#" class="fa-brands fa-linkedin"></a></li>
+                        <li><a href="#" class="fa-brands fa-youtube"></a></li>
+                    </ul>
                 </section>
             </section>
         </article>
@@ -260,14 +311,14 @@
         <section class="bottombar">
             <article>
                 <p>
-                    Copyright &copy; 2024 <a href="./index.html">DPN Tutoring Service</a>
+                Copyright &copy; 2024 <a href="./index.html">DPN Tutoring Service</a>
                 </p>
                 <p>
-                    Created by <a href="./index.html">Dylan&Pedro&Natt</a>
+                Created by <a href="./index.html">Dylan&Pedro&Natt</a>
                 </p> 
             </article>
             <a href="./index.html" class="fa-solid fa-robot"></a>
         </section>
-    </footer>  
+    </footer>   
 </body>
 </html>
