--- a/brazil.html
+++ b/brazil.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brazil</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <aside>
@@ -74,7 +76,7 @@
     </section>
     <!-- INTRODUCTION END -->
     <!-- ASSIGNMENTS -->
-    <section class="assigments" id="assigments">
+    <section class="assignments" id="assignments">
         <h2>
             Weekly Assignments
         </h2>
