Mobile price done

--- a/thailand.html
+++ b/thailand.html
@@ -121,7 +121,7 @@
             </section>
         </section>
         <!-- WEEKLY -->
-        <section class="row weekly" id="weekly">
+        <section class="weekly" id="weekly">
             <article>
                 <h2>
                     Weekly Assingments
@@ -182,17 +182,17 @@
             </section>
         </section>
         <!-- PRICE -->
-        <section class="row price" id="price">
+        <section class="price" id="price">
             <article>
-                <aside>
+                <section>
                     <h2>
                         Find your right plan
                     </h2>
-                </aside>
+                </section>
             </article>
             <section>
                 <aside>
-                    <i class="fa-regular fa-file-code"></i>
+                    <i class="fa-solid fa-star"></i>
                     <h4>
                         5 Lessons
                     </h4>
@@ -205,7 +205,7 @@
                     <a href="./index.html">Select</a>
                 </aside>
                 <aside>
-                    <i class="fa-regular fa-file-code"></i>
+                    <i class="fa-solid fa-star"></i>
                     <h4>
                         10 Lessons
                     </h4>
@@ -219,9 +219,9 @@
                 </aside>
                 <aside>
                     <h5>POPULAR</h5>
-                    <i class="fa-regular fa-file-code"></i>
+                    <i class="fa-regular fa-thumbs-up"></i>
                     <h4>
-                        20 Lessons + 1 lesson <span>FREE</span> 
+                        22 Lessons 
                     </h4>
                     <p>
                         1 month, 4 lessons per week
