--- a/brazil.html
+++ b/brazil.html
@@ -50,15 +50,17 @@
 </nav>  
 <!-- NAV END  -->
 <!-- HEADER  -->
-<header>
+ <!-- HEADER  -->
+ <header class="brazil">
     <section>
-        <aside>
-            <h1>Teaching for Diversity</h1>
-            <h3>Improve your skills with our team</h3>
-            <a href="#about">OUR STORY</a>
-        </aside>
+      <aside>
+        <span>Korea</span>
+        <strong>Brazil</strong>
+        <span>Thailand</span>
+      </aside>
     </section>
-</header>
+  </header>
+  <!-- HEADER END  -->
 <!-- HEADER END  -->
 <main>
     <!-- INTRODUCTION -->
@@ -146,7 +148,7 @@
     <!-- PACKAGES -->
     <section class="packages" id="packages">
         <h2>
-            Find the right plan!
+            Find the right plan for you!
         </h2>
         <article>
             <section>
@@ -190,7 +192,7 @@
                     </aside>
                     <small>(One-time,$28/h)</small>
                 </strong>
-                <p>Save $0 using code: DPN23</p>
+                <p>Save $50 using code: DPN23</p>
                 <a href="#">Subscribe</a>
             </section>
             <section>
