--- a/korea.html
+++ b/korea.html
@@ -42,7 +42,7 @@
       <ul>
         <li><a href="./index.html" target="_blank">Home</a></li>
       <li><a href="#intro">Introduction</a></li>
-      <li><a href="#assigment">Assignments</a></li>
+      <li><a href="#assignment">Assignments</a></li>
       <li><a href="#package">Packages</a></li>
       <li><a href="./thailand.html" target="_blank">Thailand</a></li>
       <li><a href="./brazil.html" target="_blank">Brazil</a></li>
