--- a/thailand.html
+++ b/thailand.html
@@ -30,11 +30,11 @@
         </aside>
         <ul>
             <li><a href="./index.html" target="_blank">Home</a></li>
-            <li><a href="#introduce">Introduction</a></li>
-            <li><a href="#weekly">Assingments</a></li>
-            <li><a href="#price">Packages</a></li>
-            <li><a href="./korea.html" target="_blank">Korea</a></li>
-            <li><a href="./brazil.html" target="_blank">Brazil</a></li>
+            <li><a href="./index.html/#about">About</a></li>
+            <li><a href="#contact.html">Contact</a></li>
+            <li><a href="./korea.html">Korea</a></li>
+            <li><a href="./thailand.html">Thailand</a></li>
+            <li><a href="./brazil.html">Brazil</a></li>
         </ul>
         <details>
             <summary class="fa-solid fa-bars"></summary>
@@ -50,21 +50,18 @@
     </nav>  
     <!-- NAV END  -->
     <!-- HEADER  -->
-    <header>
+    <header class="thai">
         <section>
             <aside>
-                <h1>Teaching for Diersity</h1>
-                <h3>Improve your skills with our team</h3>
-                <a href="#about">OUR STORY</a>
-                <!-- <h1>Looking for your Perfect Thai tutor?</h1>
-                <h3>Finding an answer with me</h3>
-                <a href="#price">Book a class</a> -->
+                <span>Korea</span>
+                <strong>Thailand</strong>
+                <span>Brazil</span>
             </aside>
         </section>
     </header>
     <!-- HEADER END  -->
     <!-- MAIN  -->
-    <main>
+    <main class="thailand">
         <!-- INTRODUCE -->
         <section class="introduce" id="introduce">
             <figure>
