Updated icon and change wrong word in Korea

--- a/korea.html
+++ b/korea.html
@@ -93,7 +93,7 @@
       <figure>
         <i class="fa-solid fa-language"></i>
         <figcaption>
-          <h4>Korean for Begginer</h4>
+          <h4>Korean for Beginner</h4>
           <article>
             <h6>30Weeks</h6>
             <h6>$200.00</h6>
@@ -104,7 +104,7 @@
       <figure>
         <i class="fa-solid fa-flask"></i>
         <figcaption>
-          <h4>Science for Begginer</h4>
+          <h4>Science for Beginner</h4>
           <article>
             <h6>30Weeks</h6>
             <h6>$200.00</h6>
@@ -115,7 +115,7 @@
       <figure>
         <i class="fa-solid fa-landmark"></i>
         <figcaption>
-          <h4>History for Begginer</h4>
+          <h4>History for Beginner</h4>
           <article>
             <h6>30Weeks</h6>
             <h6>$200.00</h6>
@@ -126,7 +126,7 @@
       <figure>
         <i class="fa-solid fa-calculator"></i>
         <figcaption>
-          <h4>Math for Begginer</h4>
+          <h4>Math for Beginner</h4>
           <article>
             <h6>30Weeks</h6>
             <h6>$200.00</h6>
