Mobile SCSS is done

--- a/brazil.html
+++ b/brazil.html
@@ -132,7 +132,7 @@
                 <img src="/brazil_img/history-book.png" alt="History">
                 <figcaption>
                     <aside>
-                      <h3>Portuguese</h3>
+                      <h3>History</h3>
                       <p>Grade 1-10</p>
                       <small>40 weeks</small>
                     </aside>
@@ -160,40 +160,44 @@
                         6 Months
                     </span>
                 </aside>
-                <ul>
-                    <li>Change/cancel anytime</li>
-                    <li>Access on mobile, tablet or desktop</li>
-                </ul>
-                <strong>
-                    <p>$349.99</p>
-                    <small>(One-time,$35/h)</small>
-                </strong>
-                <a href="#">Subscribe</a>
+                <section class="plans">
+                    <ul>
+                        <li>Change/cancel anytime</li>
+                        <li>Access on mobile, tablet or desktop</li>
+                    </ul>
+                    <strong>
+                        <p>$349.99</p>
+                        <small>(One-time, $35/h)</small>
+                    </strong>
+                    <a href="#">Subscribe</a>
+                </section>
             </section>
             <section>
                 <aside>
                     <h3>
-                        10 Hours/week
+                        30 Hours/week
                     </h3>
                     <span>
                         6 Months
                     </span>
                 </aside>
-                <ul>
-                    <li>Change/cancel anytime</li>
-                    <li>Access on mobile, tablet or desktop</li>
-                    <li>Unlimited Access to classes</li>
-                    <li>Tutors available 24/7</li>
-                </ul>
-                <strong>
-                    <aside>
-                        <p class="price">$649.99</p>
-                        <p>$549.99</p>   
-                    </aside>
-                    <small>(One-time,$28/h)</small>
-                </strong>
-                <p>Save $50 using code: DPN23</p>
-                <a href="#">Subscribe</a>
+                <section class="plans-2">
+                    <ul>
+                        <li>Change/cancel anytime</li>
+                        <li>Access on mobile, tablet or desktop</li>
+                        <li>Unlimited Access to classes</li>
+                        <li>Tutors available 24/7</li>
+                    </ul>
+                    <strong>
+                        <aside>
+                            <p class="price">$649.99</p>
+                            <p>$549.99</p>   
+                        </aside>
+                        <small>(One-time,$28/h)</small>
+                    </strong>
+                    <p>Save $50 using code: DPN23</p>
+                    <a href="#">Subscribe</a>
+                </section>
             </section>
             <section>
                 <aside class="value">Best Value</aside>
@@ -205,23 +209,25 @@
                         6 Months
                     </span>
                 </aside>
-                <ul>
-                    <li>Change/cancel anytime</li>
-                    <li>Access on mobile, tablet or desktop</li>
-                    <li>Unlimited Access to classes</li>
-                    <li>Tutors available 24/7</li>
-                    <li>Lectures every week</li>
-                    <li>Additional special classes</li>
-                </ul>
-                <strong>
-                    <aside>
-                        <p class="price">$1049.99</p>
-                        <p>$849.99</p>
-                    </aside>
-                    <small>(One-time,$26/h)</small>
-                </strong>
-                <p>Save $100 using code: DPN23</p>
-                <a href="#">Subscribe</a>
+                <section class="plans-3">
+                    <ul>
+                        <li>Change/cancel anytime</li>
+                        <li>Access on mobile, tablet or desktop</li>
+                        <li>Unlimited Access to classes</li>
+                        <li>Tutors available 24/7</li>
+                        <li>Lectures every week</li>
+                        <li>Additional special classes</li>
+                    </ul>
+                    <strong>
+                        <aside>
+                            <p class="price">$1049.99</p>
+                            <p>$849.99</p>
+                        </aside>
+                        <small>(One-time,$26/h)</small>
+                    </strong>
+                    <p>Save $100 using code: DPN23</p>
+                    <a href="#">Subscribe</a>
+                </section>
             </section>
         </article>
     </section>
