--- a/thailand.html
+++ b/thailand.html
@@ -68,24 +68,24 @@
                 <img src="./home_img/thai-tutor.jpg" alt="pic">
                 <figcaption>
                     <h2>
-                        Looking for your Perfect Thai tutor?
+                        Looking for your Thai tutor?
                     </h2>
                     <a href="#"> Book a class </a>
-                    <h5>
+                    <small>
                         * 1st lesson free
-                    </h5>
+                    </small>
                 </figcaption>
             </figure>
-            <section class="me">
+            <section class="nattar">
                 <article>
                     <h3>
-                        About Nattar
+                        About <span>Nattar</span>
                     </h3>
                     <p>
-                        สวัสดีค่ะ ณัฐฐา ค่ะ, I'm a high school teacher with over 8 years of experience teaching in the classroom, 3 more year teaching online and over 15 years of tutoring Maths, Thai, Science and History. แล้วพบกันนะคะ.
+                        สวัสดีค่ะ ณัฐฐา ค่ะ, I'm a high school teacher with over 8 years of experience teaching in the classroom, 3 more years teaching online and over 15 years of tutoring Maths, Thai, Science and History. การเรียนรู้ไม่มีที่สิ้นสุด แล้วพบกันนะคะ.
                     </p>
                 </article>
-                <ul>
+                <ul class="languages">
                     <li>
                         <h6>
                             <small>
