Desktop thai done

--- a/thailand.html
+++ b/thailand.html
@@ -82,7 +82,7 @@
                         About <span>Nattar</span>
                     </h3>
                     <p>
-                        สวัสดีค่ะ ณัฐฐา ค่ะ, I'm a high school teacher with over 8 years of experience teaching in the classroom, 3 more years teaching online and over 15 years of tutoring Maths, Thai, Science and History. การเรียนรู้ไม่มีที่สิ้นสุด แล้วพบกันนะคะ.
+                        สวัสดีค่ะ ณัฐฐา ค่ะ, I'm a high school teacher with over 8 years of experience teaching in the classroom, 3 more years teaching online and over 15 years of tutoring Maths, Thai, Science and History. การลงทุนในเรื่องของความรู้ เป็นการลงทุนที่ให้ผลตอบแทนดีที่สุด และ “ความรู้ คือ โอกาส และ อนาคต” แล้วพบกันนะคะ.
                     </p>
                 </article>
                 <ul class="languages">
