Tablet SCSS is done and mobile updated

--- a/brazil.html
+++ b/brazil.html
@@ -200,8 +200,8 @@
                 </section>
             </section>
             <section>
-                <aside class="value">Best Value</aside>
                 <aside>
+                    <p class="value">Best Value</p>
                     <h3>
                         50 Hours/week
                     </h3>
@@ -225,7 +225,7 @@
                         </aside>
                         <small>(One-time,$26/h)</small>
                     </strong>
-                    <p>Save $100 using code: DPN23</p>
+                    <p>Save $70 using code: DPN23</p>
                     <a href="#">Subscribe</a>
                 </section>
             </section>
