--- a/thailand.html
+++ b/thailand.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>&#127891; DPN tutoring - Thai Tutor</title>
+    <title>DPN tutoring - Thai Tutor</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="icon" href="./home_img/tutoring_icon.png">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
