--- a/brazil.html
+++ b/brazil.html
@@ -30,11 +30,11 @@
     </aside>
     <ul>
         <li><a href="./index.html" target="_blank">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="./korea.html">Korea</a></li>
-        <li><a href="./thailand.html">Thailand</a></li>
-        <li><a href="./brazil.html">Brazil</a></li>
+        <li><a href="#introduction">Introduction</a></li>
+        <li><a href="#assignments">Assignments</a></li>
+        <li><a href="#packages">Packages</a></li>
+        <li><a href="./thailand.html" target="_blank">Thailand</a></li>
+        <li><a href="./korea.html" target="_blank">Korea</a></li>
     </ul>
     <details>
         <summary class="fa-solid fa-bars"></summary>
