--- a/korea.html
+++ b/korea.html
@@ -31,21 +31,21 @@
     </aside>
     <ul>
       <li><a href="./index.html" target="_blank">Home</a></li>
-      <li><a href="./index.html/#about">About</a></li>
-      <li><a href="#contact.html">Contact</a></li>
-      <li><a href="./korea.html">Korea</a></li>
-      <li><a href="./thailand.html">Thailand</a></li>
-      <li><a href="./brazil.html">Brazil</a></li>
-    </ul>
-    <details>
-      <summary class="fa-solid fa-bars"></summary>
-      <ul>
-        <li><a href="./index.html" target="_blank">Home</a></li>
       <li><a href="#intro">Introduction</a></li>
       <li><a href="#assignment">Assignments</a></li>
       <li><a href="#package">Packages</a></li>
       <li><a href="./thailand.html" target="_blank">Thailand</a></li>
       <li><a href="./brazil.html" target="_blank">Brazil</a></li>
+    </ul>
+    <details>
+      <summary class="fa-solid fa-bars"></summary>
+      <ul>
+        <li><a href="./index.html" target="_blank">Home</a></li>
+        <li><a href="#intro">Introduction</a></li>
+        <li><a href="#assignment">Assignments</a></li>
+        <li><a href="#package">Packages</a></li>
+        <li><a href="./thailand.html" target="_blank">Thailand</a></li>
+        <li><a href="./brazil.html" target="_blank">Brazil</a></li>
       </ul>
     </details>
   </nav>  
