changed thai html nav

--- a/thailand.html
+++ b/thailand.html
@@ -31,11 +31,11 @@
         </aside>
         <ul>
             <li><a href="./index.html" target="_blank">Home</a></li>
-            <li><a href="./index.html/#about">About</a></li>
-            <li><a href="#contact.html">Contact</a></li>
-            <li><a href="./korea.html">Korea</a></li>
-            <li><a href="./thailand.html">Thailand</a></li>
-            <li><a href="./brazil.html">Brazil</a></li>
+            <li><a href="#introduce">Introduction</a></li>
+            <li><a href="#weekly">Assingments</a></li>
+            <li><a href="#price">Packages</a></li>
+            <li><a href="./korea.html" target="_blank">Korea</a></li>
+            <li><a href="./brazil.html" target="_blank">Brazil</a></li>
         </ul>
         <details>
             <summary class="fa-solid fa-bars"></summary>
