Desktop is done. All bugs fixed.

--- a/brazil.html
+++ b/brazil.html
@@ -165,10 +165,10 @@
                         <li>Change/cancel anytime</li>
                         <li>Access on mobile, tablet or desktop</li>
                     </ul>
-                    <strong>
+                    <article class="price">
                         <p>$349.99</p>
                         <small>(One-time, $35/h)</small>
-                    </strong>
+                    </article>
                     <a href="#">Subscribe</a>
                 </section>
             </section>
@@ -188,13 +188,13 @@
                         <li>Unlimited Access to classes</li>
                         <li>Tutors available 24/7</li>
                     </ul>
-                    <strong>
+                    <article class="price">
                         <aside>
-                            <p class="price">$649.99</p>
+                            <p class="dollar">$649.99</p>
                             <p>$549.99</p>   
                         </aside>
                         <small>(One-time,$28/h)</small>
-                    </strong>
+                    </article>
                     <p>Save $50 using code: DPN23</p>
                     <a href="#">Subscribe</a>
                 </section>
@@ -218,13 +218,13 @@
                         <li>Lectures every week</li>
                         <li>Additional special classes</li>
                     </ul>
-                    <strong>
+                    <article class="price">
                         <aside>
-                            <p class="price">$1049.99</p>
+                            <p class="dollar">$1049.99</p>
                             <p>$849.99</p>
                         </aside>
                         <small>(One-time,$26/h)</small>
-                    </strong>
+                    </article>
                     <p>Save $70 using code: DPN23</p>
                     <a href="#">Subscribe</a>
                 </section>
