changed the name of id to course

--- a/thailand.html
+++ b/thailand.html
@@ -179,8 +179,8 @@
                 </figure>
             </section>
         </section>
-        <!-- PRICE -->
-        <section class="price" id="price">
+        <!-- course -->
+        <section class="course" id="course">
             <article>
                 <section>
                     <h2>
