changed time tag

--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
                         <i class="fa-solid fa-business-time"></i>
                         <aside>
                             <h4>Open Everyday:</h4>
-                            <time>
-                                10AM - 8PM 
-                            </time>
+                            <p>
+                                <time>10:00</time> to <time>21:00</time>
+                            </p>
                         </aside>
                     </li>
                 </ul>
